페이지 연결 & 폴더 분리

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
                 <td>아이디</td>
                 <td><input type="text"></td>
                 <td rowspan="2"><button id="login">로그인</button></td>
-                <td rowspan="2"><button id="join">회원가임</button></td>
+                <td rowspan="2"><button id="join">회원가입</button></td>
             </tr>
             <tr>
                 <td>비밀번호</td>
