--- a/testpage.html
+++ b/testpage.html
@@ -22,7 +22,7 @@
             </tr>
             <tr>
                 <td tabindex="1" id="tab1">운동장애</td>
-                <td rowspan="3" colspan="2"><iframe tabindex="3" id="iframe" width="1100px" height="800px" src="test2.html"></iframe></td>
+                <td rowspan="3" colspan="2"><iframe tabindex="3" id="iframe" width="1100px" height="800px" src="./lowVision/test2.html"></iframe></td>
             </tr>
             <tr>
                 <td tabindex="1" id="tab2">저시력장애</td>
