--- a/exerciseDisorder/bookselect.html
+++ b/exerciseDisorder/bookselect.html
@@ -4,15 +4,155 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="subin.css">
+    <link rel="stylesheet" href="exerciseDisorder.css">
     <script src="keyboard.js"></script>
     <title>중증 지체장애</title>
 </head>
 <body>
-    <div id="non_touch">
-        <button onclick="location.href='subin.html' ">test1</button>
+    <div id="non_touch" style="clear:both;">
+        <div class="md">
+            <div class="md-title">
+                <h3 class="coTitle">신간 도서 목록</h3>
+            </div>
+            <style>
+                ul{
+                   list-style:none;
+                   }
+            </style>
+            <ul>
+                    <li id="li_size1">
+                        <div class="figure">
+                            <a href="./subin2.html">
+                                <span class="rm_br"><img id="img_size" src="./book/청강조수성병자거의일기.png" alt="도서 이미지 - 청강 조수성 병자거의일기(淸江 曺守誠 丙子擧義日記)"></span>
+                                <span class="light"></span>
+                            </a>
+                        </div>
+                        <div class="hot-info">
+                            <p class="hot-title"><a href="./subin2.html">청강 조수성 ...</a></p>
+                            <p>조욱</p>
+                        </div>
+                    </li>
+                    <li id="li_size1">
+                        <div class="figure">
+                            <a href="./subin2.html">
+                                <span class="rm_br"><img id="img_size" src="./book/리얼리티재장전.png" alt="도서 이미지 - 리얼리티 재장전"></span>
+                                <span class="light"></span>
+                            </a>
+                        </div>
+                        <div class="hot-info">
+                            <p class="hot-title"><a href="./subin2.html">리얼리티 재장전</a></p>
+                            <p>강경석</p>
+                        </div>
+                    </li>
+                    <li id="li_size1">
+                        <div class="figure">
+                            <a href="./subin2.html">
+                                <span class="rm_br"><img id="img_size" src="./book/과학이필요한시간.png" alt="도서 이미지 - 과학이 필요한 시간"></span>
+                                <span class="light"></span>
+                            </a>
+                        </div>
+                        <div class="hot-info">
+                            <p class="hot-title"><a href="./subin2.html">과학이 필요한 시간</a></p>
+                            <p>궤도</p>
+                        </div>
+                    </li>
+                    <li id="li_size1">
+                        <div class="figure">
+                            <a href="./subin2.html">
+                                <span class="rm_br"><img id="img_size" src="./book/언제올지모를희망말고지금행복했으면.png" alt="도서 이미지 - 언제 올지 모를 희망 말고 지금 행복했으면"></span>
+                                <span class="light"></span>
+                            </a>
+                        </div>
+                        <div class="hot-info">
+                            <p class="hot-title"><a href="./subin2.html">언제 올지 모를 ...</a></p>
+                            <p>송정림</p>
+                        </div>
+                    </li>
+                    <li id="li_size1">
+                        <div class="figure">
+                            <a href="./subin2.html">
+                                <span class="rm_br"><img id="img_size" src="./book/빨강.png" alt="도서 이미지 - 빨강"></span>
+                                <span class="light"></span>
+                            </a>
+                        </div>
+                        <div class="hot-info">
+                            <p class="hot-title"><a href="./subin2.html">빨강</a></p>
+                            <p>이순옥</p>
+                        </div>
+                    </li>
+                    <li id="li_size1">
+                        <div class="figure">
+                            <a href="./subin2.html">
+                                <span class="rm_br"><img id="img_size" src="./book/전원생활과시.png" alt="도서 이미지 - 전원생활(田園生活)과 시(時)"></span>
+                                <span class="light"></span>
+                            </a>
+                        </div>
+                        <div class="hot-info">
+                            <p class="hot-title"><a href="./subin2.html">전원생활(田園生活)...</a></p>
+                            <p>반야도</p>
+                        </div>
+                    </li>
+                    <li id="li_size1">
+                        <div class="figure">
+                            <a href="./subin2.html">
+                                <span class="rm_br"><img id="img_size" src="./book/건축디자인론.png" alt="도서 이미지 - 건축디자인론"></span>
+                                <span class="light"></span>
+                            </a>
+                        </div>
+                        <div class="hot-info">
+                            <p class="hot-title"><a href="./subin2.html">건축디자인론</a></p>
+                            <p>허병이</p>
+                        </div>
+                    </li>
+                    <li id="li_size1">
+                        <div class="figure">
+                            <a href="./subin2.html">
+                                <span class="rm_br"><img id="img_size" src="./book/치매예방과대처법.png" alt="도서 이미지 - 본인과 가족이 함께하는 치매예방과 대처법"></span>
+                                <span class="light"></span>
+                            </a>
+                        </div>
+                        <div class="hot-info">
+                            <p class="hot-title"><a href="./subin2.html">본인과 가족이...</a></p>
+                            <p>허근, 김지연</p>
+                        </div>
+                    </li>
+                    <li id="li_size1">
+                        <div class="figure">
+                            <a href="./subin2.html">
+                                <span class="rm_br"><img id="img_size" src="./book/빗물아파트.png" alt="도서 이미지 - 빗물 아파트"></span>
+                                <span class="light"></span>
+                            </a>
+                        </div>
+                        <div class="hot-info">
+                            <p class="hot-title"><a href="./subin2.html">빗물 아파트</a></p>
+                            <p>김연희</p>
+                        </div>
+                    </li>
+                    <li id="li_size1">
+                        <div class="figure">
+                            <a href="./subin2.html">
+                                <span class="rm_br"><img id="img_size" src="./book/메타버스와법.png" alt="도서 이미지 - 메타버스와 법: 그 물음표(?)와 느낌표(!)"></span>
+                                <span class="light"></span>
+                            </a>
+                        </div>
+                        <div class="hot-info">
+                            <p class="hot-title"><a href="./subin2.html">메타버스와 법: ...</a></p>
+                            <p>이승민</p>
+                        </div>
+                    </li>
+            </ul>
+        </div>
+        <div style="width:100px;height:500px;background-color:white;"></div>
+        <div class="figure">
+            <a href="./subin2.html">
+                <span class="rm_br"><img id="img_size" src="./book/메타버스와법.png" alt="도서 이미지 - 메타버스와 법: 그 물음표(?)와 느낌표(!)"></span>
+                <span class="light"></span>
+            </a>
+        </div>
+		    
     </div>
-    <div id="keyboard">
+    <div style="clear:both"></div>
+    <div id="keyboard" style="clear:both;background-color:white;">
         <div class="inner"><img src="./keyboard/keyboard.png" alt="keyboard" width="20" height="20">&nbsp키보드</div>
         <div id="custom-keyboard02" class="bigkeyboard_layout a11y-keyboard ko">
             <div class="main_key">
