update functions without css

--- a/exerciseDisorder/bookFinish.html
+++ b/exerciseDisorder/bookFinish.html
@@ -8,8 +8,7 @@
     <title>운동장애</title>
 </head>
 <body>
-    <h2>운동장애란?</h2>
-    <h5>몸을 마음대로 움직일 수 없는 상태로 손을 이용해서 마우스와 키보드를 사용하기 어렵습니다.</h5>
-    <button id="test" onclick="try_page()">체험하기</button>
+    <h2>체험을 완료했습니다.</h2>
+    <h5>느낀점을 공유하는 시간을 가져보는 것은 어떤가요?</h5>
 </body>
 </html>
