--- a/lowVision/test2.html
+++ b/lowVision/test2.html
@@ -9,9 +9,9 @@
             <div id="sidebar">
                 <h1 tabindex="0">OTT플랫폼</h1>
                 <br>
-                <h3 tabindex="0">검색</h3>
-                <h3 tabindex="0">카테고리</h3>
-                <h3 tabindex="0">리뷰</h3>
+                <h3 tabindex="0" id="searchBtn">검색</h3>
+                <h3 tabindex="0" id="categoryBtn">카테고리</h3>
+                <h3 tabindex="0" id="reviewBtn">리뷰</h3>
             </div>
             <div id="context">
                 <table>
@@ -40,6 +40,9 @@
                 </table>
             </div>
         </div>
+        <audio id="searchAudio" src="./audio/검색버튼.mp3"></audio>
+        <audio id="categoryAudio" src="./audio/카테고리버튼.mp3"></audio>
+        <audio id="reviewAudio" src="./audio/리뷰버튼.mp3"></audio>
     </body>
-    <script src="main.js"></script>
+    <script src="test2.js"></script>
 </html>
