--- a/testpage.html
+++ b/testpage.html
@@ -8,7 +8,7 @@
         <span tabindex="1">김영희 님</span>
         <button tabindex="1" id="logout">로그아웃</button><br><br>
         <table id="category">
-            <tr>
+            <tr id="description">
                 <td tabindex="1">설명</td>
                 <td tabindex="1">먀아아아아아아아아ㅏ아아앙아아아아아아아아아앙아</td>
                 <td>
