--- a/lowVision/test2.html
+++ b/lowVision/test2.html
@@ -4,7 +4,7 @@
         <title>저시력 시각장애</title>
         <link href="test2.css" rel="stylesheet">
     </head>
-    <body>
+    <body id="body">
         <div id="wrapper">
             <div id="sidebar">
                 <h1 tabindex="0">OTT플랫폼</h1>
