--- a/testpage.html
+++ b/testpage.html
@@ -5,8 +5,26 @@
         <link href="testpage.css" rel="stylesheet">
     </head>
     <body>
-        <span tabindex="1">김영희 님</span>
-        <button tabindex="1" id="logout">로그아웃</button><br><br>
+        <!--login 여부 검사한 후에 display 설정 바꿔야함-->
+        <div id="beforeLogin" style="display: block;">
+            <table>
+                <tr>
+                    <td>아이디</td>
+                    <td><input type="text"></td>
+                    <td rowspan="2"><button id="login">로그인</button></td>
+                    <td rowspan="2"><button id="join">회원가입</button></td>
+                </tr>
+                <tr>
+                    <td>비밀번호</td>
+                    <td><input type="password"></td>
+                </tr>
+            </table>
+        </div>
+        <div id="afterLogin" style="display: none;">
+            <span>김철수 님</span>
+            <button id="logout">로그아웃</button>
+        </div>
+        <br>
         <table id="category">
             <tr id="description">
                 <td tabindex="1">설명</td>
@@ -22,7 +40,7 @@
             </tr>
             <tr>
                 <td tabindex="1" id="tab1">운동장애</td>
-                <td rowspan="3" colspan="2"><iframe tabindex="3" id="iframe" width="1100px" height="800px" src="./lowVision/test2.html"></iframe></td>
+                <td rowspan="3" colspan="2"><iframe tabindex="3" id="iframe" width="1100px" height="800px" src="./exerciseDisorder/tutorial.html"></iframe></td>
             </tr>
             <tr>
                 <td tabindex="1" id="tab2">저시력장애</td>
