--- a/exerciseDisorder/tutorial.html
+++ b/exerciseDisorder/tutorial.html
@@ -5,11 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="exerciseDisorder.js"></script>
+    <style>
+		h2 { text-align: center; }
+		h3 { text-align: center; }
+		h4 { text-align: center; }
+        h5 { text-align: center; }
+        #test{
+            width:100px;
+            margin:auto;
+            display:block;
+            background-color: #000000;
+            border: none;
+            color:#fff;
+            padding: 15px 0;
+            text-align: center;
+            text-decoration: none;
+            font-size: 15px;
+            cursor: pointer;
+        }
+	</style>
     <title>운동장애</title>
 </head>
 <body>
     <h2>운동장애란?</h2>
     <h5>몸을 마음대로 움직일 수 없는 상태로 손을 이용해서 마우스와 키보드를 사용하기 어렵습니다.</h5>
+    <h5>따라서 운동장애 장애인은 움직일 수 있는 신체의 일부분을 적극적으로 활용하여 웹을 이용합니다.</h5>
+    <h5>주로 헤드 포인터 스틱을 머리에 고정하고 키보드를 타이핑하여 웹을 이용합니다.</h5>
+    <div style ="text-align:center";>
+        <img src="./tool/headpointer.png" width="200" height="200">
+    </div>
+    <h4>&nbsp;</h4>
+    <h3>오직 키보드만을 이용하여 웹을 체험해보세요!</h3>
+    <h5>1. [빨강 책] 을 골라주세요.</h5>
+    <h5>2. [미리보기] 를 통해 책의 내지를 확인해주세요.</h5>
+    <h5>3. [닫기] 를 통해 체험을 완료해주세요.</h5>
+    <h4>&nbsp;</h4>
     <button id="test" onclick="try_page()">체험하기</button>
 </body>
 </html>
