--- a/exerciseDisorder/bookFinish.html
+++ b/exerciseDisorder/bookFinish.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="exerciseDisorder.js"></script>
+    <style>
+        #div1 {
+            text-align : center;
+            padding : 100px 0;
+        }
+    </style>
     <title>운동장애</title>
 </head>
 <body>
-    <h2>체험을 완료했습니다.</h2>
-    <h5>느낀점을 공유하는 시간을 가져보는 것은 어떤가요?</h5>
+    <div id="div1">
+        <h2>체험을 완료했습니다.</h2>
+        <h5>느낀점을 공유하는 시간을 가져보는 것은 어떤가요?</h5>
+    </div>
 </body>
 </html>
