--- a/lowVision/tutorial2.html
+++ b/lowVision/tutorial2.html
@@ -1,9 +1,48 @@
 <!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <script src="tutorial2.js"></script>
+    <style>
+        h2 { text-align: center; }
+        h3 { text-align: center; }
+        h4 { text-align: center; }
+        h5 { text-align: center; }
+        #test{
+            width:100px;
+            margin:auto;
+            display:block;
+            background-color: #000000;
+            border: none;
+            color:#fff;
+            padding: 15px 0;
+            text-align: center;
+            text-decoration: none;
+            font-size: 15px;
+            cursor: pointer;
+        }
+    </style>
+</head>
 <html>
     <body>
-        설명 페이지 하하
-        <br><br>
-        <button id="test">저시력 장애 웹접근성 체험 고</button>
+        <h2>저시력장애란?</h2>
+        <h5>우리가 알고 있는 시각 장애인의 90%는 저시력 장애 입니다.</h5>
+        <h5>저시력 장애는 시력저하, 시야장애, 적록색맹 그리고 전색맹 등의 유형이 있습니다.</h5>
+        <h5>그 중 시력저하는 시력이 낮아 대상이 흐릿하게 보이는 상태로 안경, 렌즈, 수슬로 시력을 교정할 수 없습니다.</h5>
+        <h5>주로 확대 기능 혹은 tts 기능을 사용하여 웹을 이용합니다.</h5>
+        <div style ="text-align:center";>
+            <img src="./image/tutorial.png" width="200" height="200">
+        </div>
+        <h4>&nbsp;</h4>
+        <h3>키보드를 이용하여 소리를 듣고 웹을 체험해보세요!</h3>
+        <h5>1. 소리를 듣고 [00 영화] 를 골라주세요.</h5>
+        <h5>2. ~~를 확인해주세요.</h5>
+        <h5>3. ~~ 를 통해 체험을 완료해주세요.</h5>
+        <h4>&nbsp;</h4>
+        <div style ="text-align:center";>
+            <img src="./image/blur.png">
+            <h5>블러 기능의 ON/OFF가 가능합니다.</h5>
+        </div>
+        <h4>&nbsp;</h4>
+        <button id="test" onclick="try_page()">체험하기</button>
     </body>
-<script src="tutorial2.js"></script>
 </html>
