--- a/exerciseDisorder/bookDescription.html
+++ b/exerciseDisorder/bookDescription.html
@@ -6,23 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="exerciseDisorder.css">
     <script src="keyboard.js"></script>
+    <style>
+        table {
+          width: 300px;
+          border: 1px solid #444444;
+          border-collapse: collapse;
+        }
+        th, td {
+          border: 1px solid #444444;
+        }
+      </style>
     <title>운동장애</title>
 </head>
 <body>
-    <div id="non_touch" style="clear:both;">
+    <div id="non_touch" style="clear:both;background-color: blanchedalmond;">
         <div class="detail-title">
             <div class="detail-title-inner">
-                <h3>빨강</h3>
+                <div style="background-color:coral;"><h3>빨강</h3></div>
                 <p>2018년 볼로냐 올해의 일러스트레이터 선정작</p>
             </div>
         </div>
+        <h4>&nbsp;</h4>
         <div class="detail-inner">
             <div class="detail-book">
                 <div class="book-thum" style="float: left">
                     <div class="figure">
                         <div class="thum-box thum-zoom">
                             <span class="rm_br">
-                                <img id="img_size" src="./book/빨강.png" alt="도서 이미지 - 빨강">		
+                                <img id="img_size" src="./book/빨강.png" alt="도서 이미지 - 빨강" style="margin-right: 20px;">		
                             </span>
                             <span class="light"></span>
                         </div>
@@ -33,7 +44,7 @@
                 <div class="book-info">
                     <div class="all-volume" style="display:inline-block;vertical-align:top;">
                         <p>
-                            <span>이순옥</span> 저
+                            &nbsp;&nbsp;&nbsp;<span>이순옥</span> 저
                         </p>
                     </div>
                     
@@ -123,11 +134,14 @@
                 </em></div><em>
             </em></div><em>
         </em></div>
-        <div style="width:100px;height:500px;background-color:white;"></div>
+        <h1>&nbsp;</h1>
+        <h1>&nbsp;</h1>
+        <h1>&nbsp;</h1>
+        <h1>&nbsp;</h1>
+        <h1>&nbsp;</h1>
     </div>
     <div style="clear:both"></div>
     <div id="keyboard" style="clear:both;background-color:white;">
-        <div class="inner"><img src="./keyboard/keyboard.png" alt="keyboard" width="20" height="20">&nbsp키보드</div>
         <div id="custom-keyboard02" class="bigkeyboard_layout a11y-keyboard ko">
             <div class="main_key">
                 <div id="row0">
