--- a/exerciseDisorder/bookselect.html
+++ b/exerciseDisorder/bookselect.html
@@ -10,9 +10,9 @@
     <title>운동장애</title>
 </head>
 <body>
-    <div id="non_touch" style="clear:both;">
+    <div id="non_touch" style="clear:both;background-color: blanchedalmond;">
         <div class="md">
-            <div class="md-title">
+            <div class="md-title" style="background-color:coral;">
                 <h3 class="coTitle">신간 도서 목록</h3>
             </div>
             <style>
@@ -143,7 +143,6 @@
                     </li>
             </ul>
         </div>
-        <div style="width:100px;height:500px;background-color:white;"></div>
         <div class="figure">
             <a href="./bookselect.html">
                 <span class="rm_br"><img id="img_size" src="./book/메타버스와법.png" alt="도서 이미지 - 메타버스와 법: 그 물음표(?)와 느낌표(!)"></span>
@@ -154,7 +153,6 @@
     </div>
     <div style="clear:both"></div>
     <div id="keyboard" style="clear:both;background-color:white;">
-        <div class="inner"><img src="./keyboard/keyboard.png" alt="keyboard" width="20" height="20">&nbsp키보드</div>
         <div id="custom-keyboard02" class="bigkeyboard_layout a11y-keyboard ko">
             <div class="main_key">
                 <div id="row0">
