--- a/testpage.html
+++ b/testpage.html
@@ -3,25 +3,26 @@
     <head>
         <title>체험 페이지</title>
         <link href="testpage.css" rel="stylesheet">
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     </head>
     <body>
-        <!--login 여부 검사한 후에 display 설정 바꿔야함-->
         <div id="beforeLogin" style="display: block;">
             <table>
                 <tr>
                     <td>아이디</td>
-                    <td><input type="text"></td>
+                    <td><input type="text" id="inputId"></td>
                     <td rowspan="2"><button id="login">로그인</button></td>
                     <td rowspan="2"><button id="join">회원가입</button></td>
                 </tr>
                 <tr>
                     <td>비밀번호</td>
-                    <td><input type="password"></td>
+                    <td><input type="password" id="inputPw"></td>
                 </tr>
             </table>
         </div>
         <div id="afterLogin" style="display: none;">
-            <span>김철수 님</span>
+            <span id="user">김철수 님</span>
             <button id="logout">로그아웃</button>
         </div>
         <br>
