--- a/totalBlindness/page2.html
+++ b/totalBlindness/page2.html
@@ -16,68 +16,23 @@
             <table class="type1">
                 <thead>
                     <tr>
-                        <th>스토어</th>
-                        <th>Mac</th>
-                        <th>iPad</th>
-                        <th>iPhone</th>
-                        <th>Watch</th>
-                        <th>AirPds</th>
-                        <th>검색 버튼</th>
+                        <th tabindex="0">스토어</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th tabindex="0" onkeyup="enterkey()">검색 버튼</th>
                     </tr>
                 </thead>
-            </table>
+                <tbody><tr>
+                    <td colspan="6">
+                        <img class="fit-picture"
+                        src="./images/bg1.png"
+                        alt="background img 1"
+                        style="width: 1100px;">
+                    </td>
+                </tr></tbody>
 
-            <table class="type2">
-                <tbody>
-                    <tr>
-                        <td><img class="fit-picture"
-                            src="./images/macbookpro13.png"
-                            alt="macbookpro13"
-                            style="width:200px;">
-                        <p>MacBook Pro 13</p>
-                        <p><br>\1,790,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/imac24.png"
-                            alt="imac24"
-                            style="width:180px;">
-                        <p>iMac 24<br><br>\1,690,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/iphone14pro.png"
-                            alt="iphone14pro"
-                            style="width:130px;">
-                        <p>iPhone 14 Pro</p>
-                        <p><br>\1,550,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/iphone13.png"
-                            alt="iphone13"
-                            style="width:120px;">
-                        <p>iPhone 13<br><br>\950,000부터</p></td>
-                    </tr>
-
-                    <tr>
-                        <td><img class="fit-picture"
-                            src="./images/ipadpro.png"
-                            alt="ipadpro"
-                            style="width:150px;">
-                        <p>iPad Pro<br><br>\1,249,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/ipadair.png"
-                            alt="ipadair"
-                            style="width:150px;">
-                        <p>iPad Air<br><br>\929,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/ipadmini.png"
-                            alt="ipadmini"
-                            style="width:150px;">
-                        <p>iPad mini<br><br>\769,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/airpodspro2.png"
-                            alt="airpodspro3"
-                            style="width:120px;">
-                        <p>AirPods Pro(2세대)</p>
-                        <p><br>\359,000부터</p></td>
-                    </tr>
-                </tbody>
             </table>
 
 
