--- a/totalBlindness/page2.html
+++ b/totalBlindness/page2.html
@@ -16,7 +16,7 @@
             <table class="type1">
                 <thead>
                     <tr>
-                        <th tabindex="0">스토어</th>
+                        <th tabindex="0" onkeyup="back()">스토어</th>
                         <th></th>
                         <th></th>
                         <th></th>
@@ -27,8 +27,16 @@
                 <tbody><tr>
                     <td colspan="6">
                         <img class="fit-picture"
-                        src="./images/bg1.png"
+                        src="./images/bg2.png"
                         alt="background img 1"
+                        style="width: 1100px;">
+                        <img class="fit-picture"
+                        src="./images/bg1.png"
+                        alt="background img 2"
+                        style="width: 1100px;">
+                        <img class="fit-picture"
+                        src="./images/bg3.png"
+                        alt="background img 3"
                         style="width: 1100px;">
                     </td>
                 </tr></tbody>
