--- a/totalBlindness/page4.html
+++ b/totalBlindness/page4.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="page3.css">
+        <link rel="stylesheet" href="page4.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
@@ -17,64 +17,68 @@
                 <thead>
                     <tr>
                         <th>스토어</th>
-                        <th tabindex="0">Mac</th>
-                        <th tabindex="0" onkeyup="enterkey()">iPad</th>
-                        <th tabindex="0">iPhone</th>
-                        <th tabindex="0">Watch</th>
-                        <th tabindex="0">AirPds</th>
+                        <th>Mac</th>
+                        <th>iPad</th>
+                        <th>iPhone</th>
+                        <th>Watch</th>
+                        <th>AirPds</th>
                     </tr>
                 </thead>
+                <tbody>
+                    <tr><td colspan="6">
+                        <img class="fit-picture"
+                        src="./images/banner2.jpg"
+                        alt="background img 1"
+                        style="width: 1200px;">
+                    </td></tr>
+                </tbody>
             </table>
 
             <table class="type2">
                 <tbody>
-                    <tr>
-                        <td><img class="fit-picture"
-                            src="./images/macbookpro13.png"
-                            alt="macbookpro13"
-                            style="width:200px;">
-                        <p>MacBook Pro 13</p>
-                        <p><br>\1,790,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/imac24.png"
-                            alt="imac24"
-                            style="width:180px;">
-                        <p>iMac 24<br><br>\1,690,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/iphone14pro.png"
-                            alt="iphone14pro"
-                            style="width:130px;">
-                        <p>iPhone 14 Pro</p>
-                        <p><br>\1,550,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/iphone13.png"
-                            alt="iphone13"
-                            style="width:120px;">
-                        <p>iPhone 13<br><br>\950,000부터</p></td>
+                    <tr class = "type2">
+                        <td colspan="2" tabindex="0" onkeyup="back()">
+                            <h2>iPad Pro</h2>
+                            <img class="fit-picture"
+                            src="./images/iPad Pro.png"
+                            alt="background img 1"
+                            style="width: 300px;">
+                            <p>\1,249,000부터</p>
+                        </td>
+                        <td colspan="2" tabindex="0" onkeyup="enterkey()">
+                            <h2>iPad Air</h2>
+                            <img class="fit-picture"
+                            src="./images/iPad Air.png"
+                            alt="background img 1"
+                            style="width: 300px;">
+                            <p>\929,000부터</p>
+                        </td>
+                        <td colspan="2" tabindex="0" onkeyup="back()">
+                            <h2>iPad (10세대)</h2>
+                            <img class="fit-picture"
+                            src="./images/iPad(10).png"
+                            alt="background img 1"
+                            style="width: 300px;">
+                            <p>\679,000부터</p>
+                        </td>
                     </tr>
-
-                    <tr>
-                        <td><img class="fit-picture"
-                            src="./images/ipadpro.png"
-                            alt="ipadpro"
-                            style="width:150px;">
-                        <p>iPad Pro<br><br>\1,249,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/ipadair.png"
-                            alt="ipadair"
-                            style="width:150px;">
-                        <p>iPad Air<br><br>\929,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/ipadmini.png"
-                            alt="ipadmini"
-                            style="width:150px;">
-                        <p>iPad mini<br><br>\769,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/airpodspro2.png"
-                            alt="airpodspro3"
-                            style="width:120px;">
-                        <p>AirPods Pro(2세대)</p>
-                        <p><br>\359,000부터</p></td>
+                    <tr class = "type2">
+                        <td colspan="2" tabindex="0" onkeyup="back()">
+                            <h2>iPad (9세대)</h2>
+                            <img class="fit-picture"
+                            src="./images/iPad(9).png"
+                            alt="background img 1"
+                            style="width: 300px;">
+                            <p>\499,000부터</p>
+                        </td>
+                        <td colspan="2" tabindex="0" onkeyup="back()">
+                            <h2>iPad mini</h2>
+                            <img class="fit-picture"
+                            src="./images/iPad mini.png"
+                            alt="background img 1"
+                            style="width: 300px;">
+                            <p>\769,000부터</p>
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -92,5 +96,5 @@
     
 
 
-    <script src="page3.js"></script>
+    <script src="page4.js"></script>
 </html>
