--- a/totalBlindness/page3.html
+++ b/totalBlindness/page3.html
@@ -16,67 +16,84 @@
             <table class="type1">
                 <thead>
                     <tr>
-                        <th tabindex="0">스토어</th>
+                        <th>스토어</th>
                         <th></th>
                         <th></th>
                         <th></th>
                         <th></th>
-                        <th tabindex="0">검색 버튼</th>
+                        <th>검색 버튼</th>
                     </tr>
                 </thead>
-            </table>
-
-            <table class="type2">
                 <tbody>
+                    <tr><td colspan="6">
+                        <img class="fit-picture"
+                        src="./images/banner.jpg"
+                        alt="background img 1"
+                        style="width: 1200px;">
+                    </td></tr>
                     <tr>
-                        <td><img class="fit-picture"
-                            src="./images/macbookpro13.png"
-                            alt="macbookpro13"
-                            style="width:200px;">
-                        <p>MacBook Pro 13</p>
-                        <p><br>\1,790,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/imac24.png"
-                            alt="imac24"
-                            style="width:180px;">
-                        <p>iMac 24<br><br>\1,690,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/iphone14pro.png"
-                            alt="iphone14pro"
-                            style="width:130px;">
-                        <p>iPhone 14 Pro</p>
-                        <p><br>\1,550,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/iphone13.png"
-                            alt="iphone13"
-                            style="width:120px;">
-                        <p>iPhone 13<br><br>\950,000부터</p></td>
+                        <td></td>
+                        <td tabindex="0" onkeyup="back()">
+                            <img class="fit-picture"
+                            src="./images/Mac.jpg"
+                            alt="Mac"
+                            style="width: 200px;">
+                            <b>Mac</b>
+                        </td>
+                        <td tabindex="0" onkeyup="back()">
+                            <img class="fit-picture"
+                            src="./images/iPhone.jpg"
+                            alt="iPhone"
+                            style="width: 200px;">
+                            <b>iPhone</b>
+                        </td>
+                        <td tabindex="0" onkeyup="enterkey()">
+                            <img class="fit-picture"
+                            src="./images/iPad.jpg"
+                            alt="iPad"
+                            style="width: 200px;">
+                            <b>iPad</b>
+                        </td>
+                        <td tabindex="0" onkeyup="back()">
+                            <img class="fit-picture"
+                            src="./images/Apple Watch.jpg"
+                            alt="Apple Watch"
+                            style="width: 200px;">
+                            <b>Apple Watch</b>
+                        </td>
                     </tr>
-
                     <tr>
-                        <td><img class="fit-picture"
-                            src="./images/ipadpro.png"
-                            alt="ipadpro"
-                            style="width:150px;">
-                        <p>iPad Pro<br><br>\1,249,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/ipadair.png"
-                            alt="ipadair"
-                            style="width:150px;">
-                        <p>iPad Air<br><br>\929,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/ipadmini.png"
-                            alt="ipadmini"
-                            style="width:150px;">
-                        <p>iPad mini<br><br>\769,000부터</p></td>
-                        <td><img class="fit-picture"
-                            src="./images/airpodspro2.png"
-                            alt="airpodspro3"
-                            style="width:120px;">
-                        <p>AirPods Pro(2세대)</p>
-                        <p><br>\359,000부터</p></td>
+                        <td></td>
+                        <td tabindex="0" onkeyup="back()">
+                            <img class="fit-picture"
+                            src="./images/AirPods.jpg"
+                            alt="AirPods"
+                            style="width: 200px;">
+                            <b>AirPods</b>
+                        </td>
+                        <td tabindex="0" onkeyup="back()">
+                            <img class="fit-picture"
+                            src="./images/AirTag.jpg"
+                            alt="AirTag"
+                            style="width: 200px;">
+                            <b>AirTag</b>
+                        </td>
+                        <td tabindex="0" onkeyup="back()">
+                            <img class="fit-picture"
+                            src="./images/Apple TV 4K.jpg"
+                            alt="Apple TV 4K"
+                            style="width: 200px;">
+                            <b>Apple TV 4K</b>
+                        </td>
+                        <td tabindex="0" onkeyup="back()">
+                            <img class="fit-picture"
+                            src="./images/액세서리.jpg"
+                            alt="액세서리"
+                            style="width: 200px;">
+                            <b>액세서리</b>
+                        </td>
                     </tr>
-                </tbody>
+            </tbody>
             </table>
 
 
