--- a/testpage.html
+++ b/testpage.html
@@ -26,30 +26,47 @@
             <button id="logout">로그아웃</button>
         </div>
         <br>
-        <table id="category">
-            <tr id="description">
-                <td tabindex="1">설명</td>
-                <td tabindex="1">먀아아아아아아아아ㅏ아아앙아아아아아아아아아앙아</td>
-                <td>
-                    <div class="toggle_box">
-                    <input tabindex="2" type="checkbox" id="custom_input"></input>
-                    <label tabindex="2" id="toggle_btn_label" for="custom_input" class="toggle_btn_label">
-                      <span></span>
-                    </label>
-                  </div>
-                </td>
-            </tr>
-            <tr>
-                <td tabindex="1" id="tab1">운동장애</td>
-                <td rowspan="3" colspan="2"><iframe tabindex="3" id="iframe" width="1100px" height="800px" src="./exerciseDisorder/tutorial.html"></iframe></td>
-            </tr>
-            <tr>
-                <td tabindex="1" id="tab2">저시력장애</td>
-            </tr>
-            <tr>
-                <td tabindex="1" id="tab3">전맹시각장애</td>
-            </tr>
-        </table>
+        <div id="wrapper">
+            <div id="test">
+                <table id="category">
+                    <tr id="description">
+                        <td></td>
+                        <td>
+                            <div class="toggle_box">
+                            <input tabindex="2" type="checkbox" id="custom_input"></input>
+                            <label tabindex="2" id="toggle_btn_label" for="custom_input" class="toggle_btn_label">
+                            <span></span>
+                            </label>
+                        </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td tabindex="1" id="tab1">운동장애</td>
+                        <td rowspan="3" colspan="2"><iframe tabindex="3" id="iframe" width="1100px" height="800px" src="./exerciseDisorder/tutorial.html"></iframe></td>
+                    </tr>
+                    <tr>
+                        <td tabindex="1" id="tab2">저시력장애</td>
+                    </tr>
+                    <tr>
+                        <td tabindex="1" id="tab3">전맹시각장애</td>
+                    </tr>
+                </table>
+            </div>
+            <div id="comment">
+                <table id="others">
+                    <tr>
+                        <td>김철수</td>
+                        <td>유익한 체험이네요</td>
+                    </tr>
+                </table>
+                <table id="mine">
+                    <tr>
+                        <td>김윤서</td>
+                        <td>잉</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </body>
     <script src="testpage.js"></script>
 </html>
