--- a/testpage.html
+++ b/testpage.html
@@ -65,6 +65,10 @@
                         <td>잉</td>
                     </tr>
                 </table>
+                <div style="position:absolute; bottom:0px;">
+                    <input id="comment-input" placeholder="댓글을 입력해 주세요.">
+                    <button id="submit">등록</button>
+                </div>
             </div>
         </div>
     </body>
