--- a/totalBlindness/page2.html
+++ b/totalBlindness/page2.html
@@ -16,12 +16,14 @@
             <table class="type1">
                 <thead>
                     <tr>
-                        <th tabindex="0" onkeyup="back()">스토어</th>
+                        <th tabindex="0" onkeyup="back()" onfocus="play(event)">스토어
+                            <audio src="./audio/스토어.MP3" id="store">오디오 지원되지 않는 브라우저</audio></th>
                         <th></th>
                         <th></th>
                         <th></th>
                         <th></th>
-                        <th tabindex="0" onkeyup="enterkey()">검색 버튼</th>
+                        <th tabindex="0" onkeyup="enterkey()" onfocus="play(event)">검색 버튼
+                            <audio src="./audio/검색 버튼.MP3" id="store">오디오 지원되지 않는 브라우저</audio></th>
                     </tr>
                 </thead>
                 <tbody><tr>
