--- a/commentPage/edcomment.html
+++ b/commentPage/edcomment.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link href="style.css" rel="stylesheet">
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     </head>
     <body>
         <table id="others">
@@ -21,4 +23,5 @@
             <button id="submit">등록</button>
         </div>
     </body>
+    <script src="edcomment.js"></script>
 </html>
