--- a/commentPage/tbcomment.html
+++ b/commentPage/tbcomment.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link href="style.css" rel="stylesheet">
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     </head>
     <body>
         <table id="others">
