--- a/commentPage/edcomment.html
+++ b/commentPage/edcomment.html
@@ -6,18 +6,8 @@
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     </head>
     <body>
-        <table id="others">
-            <tr>
-                <td>김철수</td>
-                <td>이건 운동장애 댓글창이에요</td>
-            </tr>
-        </table>
-        <table id="mine">
-            <tr>
-                <td>김윤서</td>
-                <td>잉</td>
-            </tr>
-        </table>
+        <table class="others"></table>
+        <table class="mine"></table>
         <div style="position:absolute; bottom:0px;">
             <input id="comment-input" placeholder="댓글을 입력해 주세요.">
             <button id="submit">등록</button>
